{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 92,
  "lineage": "283e94d7-8e0f-aad2-af43-4e4f507cefad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595324472678:internet-gateway/igw-065182e3843e1230c",
            "id": "igw-065182e3843e1230c",
            "owner_id": "595324472678",
            "tags": {
              "name": "myigt"
            },
            "tags_all": {
              "name": "myigt"
            },
            "vpc_id": "vpc-08381df373509b33f"
          },
          "dependencies": [
            "aws_vpc.myvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595324472678:security-group/sg-01c046e1abcfbf8b0",
            "description": " this is used for elb to open traffic to internrt",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c046e1abcfbf8b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-securitygroup",
            "name_prefix": "",
            "owner_id": "595324472678",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "elb-securitygroup"
            },
            "tags_all": {
              "name": "elb-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-08381df373509b33f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myinstance-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595324472678:security-group/sg-09d257e098242b816",
            "description": "this is to all ssh from elb to my instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d257e098242b816",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c046e1abcfbf8b0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myinstance-securitygroup",
            "name_prefix": "",
            "owner_id": "595324472678",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "myinstance-securitygroup"
            },
            "tags_all": {
              "name": "myinstance-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-08381df373509b33f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_vpc.myvpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595324472678:subnet/subnet-01c66dd1f964aa4b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01c66dd1f964aa4b8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595324472678",
            "tags": {
              "name": "public-subnet01"
            },
            "tags_all": {
              "name": "public-subnet01"
            },
            "vpc_id": "vpc-08381df373509b33f"
          },
          "dependencies": [
            "aws_vpc.myvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595324472678:subnet/subnet-000c9cd8149c6c1d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-000c9cd8149c6c1d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595324472678",
            "tags": {
              "name": "public-subnet02"
            },
            "tags_all": {
              "name": "public-subnet02"
            },
            "vpc_id": "vpc-08381df373509b33f"
          },
          "dependencies": [
            "aws_vpc.myvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595324472678:vpc/vpc-08381df373509b33f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9e7c1f0b42fc808",
            "default_route_table_id": "rtb-05ca1b57022d89031",
            "default_security_group_id": "sg-005cccae66424f189",
            "dhcp_options_id": "dopt-885e76f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08381df373509b33f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05ca1b57022d89031",
            "owner_id": "595324472678",
            "tags": {
              "name": "myvpc01"
            },
            "tags_all": {
              "name": "myvpc01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}